--- a/Placas/placas.css
+++ b/Placas/placas.css
@@ -12,7 +12,8 @@ body {
     margin-left: 0px;
     margin-right: 0px;
     flex-direction: row;
-    margin-top: 100px;
+    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .titulo {
